# MyBB_Playground

./: .gitignore  .mybb-forge.env.example  .mybb-forge.yaml  .mybb-forge.yaml.example  AGENTS.md  CLAUDE.md  README.md  install.sh  setup_dev_env.sh  start_mybb.sh  stop_mybb.sh  verify_meta_format.py
mybb_mcp/: LICENSE  README.md  pyproject.toml
mybb_mcp/docs/: TOOLS_CONTENT.md  TOOLS_PLUGINS_HOOKS.md  TOOLS_SEARCH_SETTINGS.md  TOOLS_TASKS_MOD_USERS.md
mybb_mcp/mybb_mcp/: __init__.py  config.py  server.py  tools_registry.py
mybb_mcp/mybb_mcp/bridge/: __init__.py  client.py
mybb_mcp/mybb_mcp/db/: __init__.py  connection.py
mybb_mcp/mybb_mcp/handlers/: __init__.py  admin.py  common.py  content.py  database.py  dispatcher.py  languages.py  moderation.py  orchestration.py  plugin_git.py  plugins.py  search.py  subtrees.py  sync.py  tasks.py  templates.py  themes.py  users.py  workspace_git.py
mybb_mcp/mybb_mcp/orchestration/: __init__.py  log_parser.py  server_service.py
mybb_mcp/mybb_mcp/sync/: __init__.py  cache.py  config.py  groups.py  manifest.py  plugin_templates.py  router.py  service.py  stylesheets.py  templates.py  (+1 more)
mybb_mcp/tests/: README.md  __init__.py  conftest.py  manual_test_sync_status.py  test_bridge_client.py  test_config.py  test_hooks_expanded.py  test_hooks_integration.py  test_mcp_plugin_manager_integration.py  test_moderation_user_mgmt.py  test_plugin_lifecycle.py  test_search_tools.py  test_security.py  test_settings_cache.py  test_sync_status_enhanced.py  test_task_management.py  test_template_tools.py  test_theme_mcp_tools.py
(+644 files in other folders)
